# ayaya

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  build.bat  build.rs  build.sh  nodes.md  notes.md  script.ld
.cargo/: config.toml
ayaya/: Cargo.toml  build.rs
ayaya/.cargo/: config.toml
ayaya/src/: ayaya.utf.ans.DEFLATE  data  main.rs  mapping.rs
src/: ayaya.utf.ans  main.rs
tools/ansi-dedupe/: Cargo.toml  ayaya.utf.ans
tools/ansi-dedupe/src/: main.rs
