[package]
name = "ayaya"
version = "2.0.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
description = "AYAYA"
readme = "README.md"
repository = "https://github.com/edward-shen/ayaya"
license = "MIT OR Apache-2.0"
keywords = ["ayaya", "weeb", "meme"]
categories = ["command-line-utilities"]
exclude = ["ayaya.jpg"]

[dependencies]
miniz_oxide = "0.4"
# While no references of this exist in the source, we need memory primitives
# in scope for the linker.
# compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features=["mem"] }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
