[package]
name = "ayaya"
version = "2.0.2"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
description = "AYAYA"
readme = "README.md"
repository = "https://github.com/edward-shen/ayaya"
license = "MIT OR Apache-2.0"
keywords = ["ayaya", "weeb", "meme"]
categories = ["command-line-utilities"]
exclude = ["ayaya.jpg"]

[dependencies]
miniz_oxide = { version = "0.5", optional = true }

[features]
default = ["miniz_oxide"]
smaller = []

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
strip = true
