[package]
name = "ayaya"
version = "2.0.2"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
description = "AYAYA"
readme = "README.md"
repository = "https://github.com/edward-shen/ayaya"
license = "MIT OR Apache-2.0"
keywords = ["ayaya", "weeb", "meme"]
categories = ["command-line-utilities"]
exclude = ["ayaya.jpg"]

[dependencies]

[features]
smaller = []
